--- a/exercicio_01/exercicio_1.rmd
+++ b/exercicio_01/exercicio_1.rmd
@@ -17,11 +17,11 @@ library(tibble)
 ## Visualização
 ```{r}
 dados_exercicios <- read.csv("dados_exercicio.csv") %>% select(
-    Gender, Age, Occupation, Sleep.Duration, Quality.of.Sleep, Physical.Activity.Level,
-    Stress.Level, BMI.Category, Heart.Rate, Daily.Steps, Sleep.Disorder
+  Gender, Age, Occupation, Sleep.Duration, Quality.of.Sleep, Physical.Activity.Level,
+  Stress.Level, BMI.Category, Heart.Rate, Daily.Steps, Sleep.Disorder
 )
 dados_exercicios <- dados_exercicios %>%
-    dplyr::mutate(BMI.Category = ifelse(dados_exercicios$BMI.Category == "Normal Weight", yes = "Normal", no = BMI.Category))
+  dplyr::mutate(BMI.Category = ifelse(dados_exercicios$BMI.Category == "Normal Weight", yes = "Normal", no = BMI.Category))
 
 dados_exercicios$Gender <- factor(dados_exercicios$Gender)
 dados_exercicios$Occupation <- factor(dados_exercicios$Occupation)
@@ -29,15 +29,15 @@ dados_exercicios$BMI.Category <- factor(dados_exercicios$BMI.Category, levels = 
 dados_exercicios$Sleep.Disorder <- factor(dados_exercicios$Sleep.Disorder)
 
 head(dados_exercicios) %>%
-    kbl() %>%
-    kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
+  kbl() %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
 ## Sumário
 ```{r}
 summary(dados_exercicios) %>%
-    kbl() %>%
-    kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
+  kbl() %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
 # Análise variáveis qualitativas
@@ -83,18 +83,30 @@ boxplot(dados_exercicios$Age)
 
 ## Relação entre variável qualitativa e variável quantitativa
 ```{r}
+# Gerar a tabela cruzada de gênero e qualidade do sono
 tabela_cruzada_genero_qualidade_sono <- round(prop.table(table(dados_exercicios$Gender, dados_exercicios$Quality.of.Sleep)) * 100, 2)
+
+# Adicionar margens (totais) à tabela
 tabela_cruzada_com_totais <- addmargins(tabela_cruzada_genero_qualidade_sono)
 
-tabela_cruzada_com_totais %>%
-    kbl() %>%
-    kable_styling(bootstrap_options = c("striped", "hover", "condensed")) %>%
-    add_header_above(c(" " = 1, "Qualidade do Sono" = ncol(tabela_cruzada_com_totais) - 1, " " = 1)) %>%
-    footnote(
-        general = "Os valores em percentual.",
-        general_title = "Nota:",
-        footnote_as_chunk = TRUE
-    )
+# Converter a tabela em um data frame
+tabela_df <- as.data.frame.matrix(tabela_cruzada_com_totais)
+
+# Adicionar símbolo de porcentagem aos valores
+tabela_df_percent <- tabela_df %>%
+  mutate_all(~ paste0(., "%") %>% gsub("\\.", ",", .))
+
+# Adicionar uma coluna para o gênero
+tabela_df_percent <- tabela_df_percent %>%
+  rownames_to_column("Gênero")
+
+# Gerar a tabela formatada com kableExtra
+library(kableExtra)
+
+tabela_df_percent %>%
+  kbl() %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed")) %>%
+  add_header_above(c(" " = 1, "Qualidade do Sono" = (ncol(tabela_df_percent) - 1)))
 ```
 Explicação: 18,45% das mulheres tem sono com qualidade igual a 9.
 
@@ -102,48 +114,20 @@ Explicação: 18,45% das mulheres tem sono com qualidade igual a 9.
 tabela_cruzada_genero_qualidade_sono <- round(prop.table(table(dados_exercicios$Gender, dados_exercicios$Quality.of.Sleep), margin = 2) * 100, 2)
 tabela_cruzada_com_totais_genero_sono <- addmargins(tabela_cruzada_genero_qualidade_sono)
 
-tabela_cruzada_com_totais_genero_sono %>%
-    kbl() %>%
-    kable_styling(bootstrap_options = c("striped", "hover", "condensed")) %>%
-    add_header_above(c(" " = 1, "Qualidade do Sono" = ncol(tabela_cruzada_com_totais_genero_sono) - 1, " " = 1)) %>%
-    footnote(
-        general = "Os valores em percentual.",
-        general_title = "Nota:",
-        footnote_as_chunk = TRUE
-    )
-```
-Explicação: Das pessoas com qualidade de sono igual a 9, 97,18% são mulheres.
-
-```{r}
-# Calcular a tabela cruzada com proporções por coluna
-tabela_cruzada_genero_qualidade_sono <- round(prop.table(table(dados_exercicios$Gender, dados_exercicios$Quality.of.Sleep), margin = 2) * 100, 2)
-
-# Adicionar margens (totais)
-tabela_cruzada_com_totais <- addmargins(tabela_cruzada_genero_qualidade_sono)
-
-# Transformar a tabela em data frame para facilitar a manipulação
-tabela_df <- as.data.frame.matrix(tabela_cruzada_com_totais)
-
+tabela_df <- as.data.frame.matrix(tabela_cruzada_com_totais_genero_sono)
 # Adicionar símbolo de porcentagem aos valores
 tabela_df_percent <- tabela_df %>%
-  mutate_all(~ paste0(., "%"))
+  mutate_all(~ paste0(., "%") %>% gsub("\\.", ",", .))
 
-# Adicionar a coluna de sumários como string para manter o formato
 tabela_df_percent <- tabela_df_percent %>%
-  rownames_to_column("Gender")
+  rownames_to_column("Gênero")
 
-# Remover a coluna "Sum"
 tabela_df_percent <- tabela_df_percent %>%
   select(-Sum)
 
-# Criar a tabela cruzada com título, cabeçalho adicional e rodapé usando kableExtra
 tabela_df_percent %>%
-  kbl(caption = "Distribuição da Qualidade do Sono por Gênero") %>%
+  kbl() %>%
   kable_styling(bootstrap_options = c("striped", "hover", "condensed")) %>%
-  add_header_above(c(" " = 1, "Qualidade do Sono" = ncol(tabela_df_percent) - 1)) %>%
-  footnote(
-    general = "Os valores em percentual.",
-    general_title = "Nota:",
-    footnote_as_chunk = TRUE
-  )
+  add_header_above(c(" " = 1, "Qualidade do Sono" = ncol(tabela_df_percent) - 1))
 ```
+Explicação: Das pessoas com qualidade de sono igual a 9, 97,18% são mulheres.
