--- a/exercicio_08/grupo_04.rmd
+++ b/exercicio_08/grupo_04.rmd
@@ -8,7 +8,7 @@ date: 11/06/2024
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-# Entendimento inicial do dataset
+# 1. Entendimento inicial do dataset
 Segue informações gerais dos campos do dataset 
 ```{r}
 data <- read.csv("C:/Ambiente_desenvolvimento/intr_estatistica_r/exercicio_08/CO2 Emissions_Canada.csv")
@@ -55,7 +55,7 @@ data_agr
 - O tipo mais econômico é o carro com **3 cilindros**, tipo de combustível **X**.
 - O tipo mais popular são os carros de **4 cilindros** e tipo de combustível **X**.
 
-## Diferença proporção carros automáticos da FORD e CHEVROLET
+# 2. Diferença proporção carros automáticos da FORD e CHEVROLET
 ```{r}
 data_agr_marca <- data %>%
     dplyr::filter(Make %in% c("FORD", "CHEVROLET")) %>%
@@ -70,7 +70,7 @@ table(data_agr_marca$Make, data_agr_marca$manual)
 ```
 Quantidade **relativa** de carros automáticos da FORD e CHEVROLET
 ```{r}
-round(prop.table(table(data_agr_marca$Make, data_agr_marca$manual))*100, 2)
+round(prop.table(table(data_agr_marca$Make, data_agr_marca$manual)) * 100, 2)
 ```
 Teste de proporção
 ```{r}
@@ -83,3 +83,31 @@ prop.test(table(data_agr_marca$Make, data_agr_marca$manual))
 
 Com um valor p de 0.01182, que é menor do que o nível de significância comum de 0.05, rejeitamos a hipótese nula. 
 Isso indica que há uma diferença estatisticamente significativa na proporção de carros automáticos entre as marcas FORD e CHEVROLET.
+
+# 3. Correlação consumo combustível (rodovia) e emissão CO2 carros COMPACT
+```{r}
+data_compact <- data %>%
+    filter(Vehicle.Class == "COMPACT") %>%
+    select(Fuel.Consumption.Hwy..L.100.km., CO2.Emissions.g.km.)
+
+plot(data_compact$Fuel.Consumption.Hwy..L.100.km., data_compact$CO2.Emissions.g.km., xlab = "Consumo rodovia", ylab = "Emissão CO2", main = "Gráfico de dispersão consumo X emissão CO2")
+```
+
+**Interpretação:** Olhando o gáfico de dispersão, podemos verificar algum relacionamento entre consumo e emissão de CO2
+
+
+```{r}
+par(mfrow = c(1,2))
+
+boxplot(data_compact$Fuel.Consumption.Hwy..L.100.km., main = "Consumo rodovia (Km/L)")
+boxplot(data_compact$CO2.Emissions.g.km., main = "Emissão CO2 gramas/Km")
+```
+
+**Interpretação:** Visualizando o gráfico de boxplot, verificamos a existência de outliers. 
+A existência de outliers nos direciona para o uso do método de correlação de **Spearman**.
+
+```{r}
+cor(data_compact$Fuel.Consumption.Hwy..L.100.km., data_compact$CO2.Emissions.g.km., method = "spearman")
+```
+**Interpretação:** O coeficiente de correlação entre **consumo Km/L** e **emissão CO2 grama/Km** é de **0,933**.
+Esse valor indica uma relação muito forte entre as duas variáveis, onde se uma aumenta, a outra aumenta também.
